--- a/src/styles.scss
+++ b/src/styles.scss
@@ -34,7 +34,7 @@ body {
   margin: 0;
   height: 100%;
   background-color: rgb(235, 235, 235);
-  //overflow: hidden;
+  overflow: hidden;
 }
 
 /* @media (prefers-color-scheme: dark) {
